--- a/cource_list.html
+++ b/cource_list.html
@@ -16,7 +16,7 @@
     .video_content {
     	padding-top: 30px;
     }
-    .video-js:hover:after {
+/*    .video-js:hover:after {
 	    position: absolute;
 	    top: 0;
 	    left: 0;
@@ -28,7 +28,7 @@
 	    font-size: 14px;
 	    text-align: center;
 	    padding-top: 28%;
-	}
+	}*/
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -165,6 +165,7 @@
 				<source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.webm" type="video/webm">
 			</video>
         </div>
+        <br/>
           <div class="col-sm-4 col-md-3">
 		    <video class="video-js" preload="auto" poster="img/demo/example-image.jpg" data-setup="{}">
 				<source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.mp4" type="video/mp4">
