添加创建课程和排课界面

--- a/cource_list.html
+++ b/cource_list.html
@@ -28,7 +28,7 @@
 	    font-size: 14px;
 	    text-align: center;
 	    padding-top: 28%;
-	}*/
+	}
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -42,7 +42,7 @@
        
 <div class="content">
     <ol class="breadcrumb">
-        <li><a href="#">创建本校课程</a></li>
+        <li><a href="../ftedu_web/cource_index.html">创建本校课程</a></li>
         <li class="active">预选课程</li>
     </ol>
 
@@ -60,7 +60,7 @@
                       </div>
                       <div class="collapse navbar-collapse navbar-collapse-01">
                             <ul class="nav navbar-nav navbar-left">
-                              <li class="active"><a href="#">创建本校课程</a></li>
+                              <li class="active"><a href="../ftedu_web/cource_index.html">创建本校课程</a></li>
                               <li class="dropdown">
                                 <a href="#fakelink" class="dropdown-toggle" data-toggle="dropdown">
                                   训练类型
@@ -98,7 +98,7 @@
                               </li>
 
 
-  							<li class="dropdown">
+  							             <li class="dropdown">
                                    <a href="#fakelink" class="dropdown-toggle" data-toggle="dropdown">
                                       训练强度
                                       <span class="caret"></span>
@@ -133,7 +133,7 @@
                                       <li>  <a href="#fakelink">高</a></li>
                                     </ul> <!-- /Sub menu -->
                               </li>
-                              <li><a href="#fakelink">进入排课</a></li>
+                              <li><a href="../ftedu_web/cource_sort.html">进入排课</a></li>
                             </ul>
                      </div><!--/.nav -->
                      </nav>
